Fix restartshard command
Add /my-guild-count endpoint